# CAVO

./: .gitignore  CMakeLists.txt  README.md
header_files/: base.hpp  camera.hpp  chroma_controller_render.hpp  chroma_render_controller.hpp  chroma_thread.hpp  frame.hpp  header.hpp  main-cavo-gui.hpp  main_cavo_gui.hpp  mat-render.hpp  mat_render.hpp  morphological_operation.hpp  slider-group.hpp  slider_group.hpp
source_files/: camera.cpp  frame.cpp  main-image-gui.cpp  main.cpp  mat-render.cpp  merge-frame-render.cpp  morphological-operation.cpp  slider-group.cpp
source_files/ec/edu/ups/controller/: chroma_controller_render.cpp  chroma_render_controller.cpp  merge-frame-render.cpp  morphological-operation.cpp  morphological_operation.cpp  thread_controller.cpp
source_files/ec/edu/ups/model/: camera.cpp  frame.cpp  mat-render.cpp  mat_render.cpp  slider-group.cpp  slider_group.cpp
source_files/ec/edu/ups/view/: main-cavo-gui.cpp  main-image-gui.cpp  main.cpp  main_cavo_gui.cpp
